[gd_scene load_steps=9 format=3 uid="uid://dbn7hv16kpv3o"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3i5fa"]
[ext_resource type="Texture2D" uid="uid://by6tnb5g0qqq3" path="res://art/playerGrey_up1.png" id="1_ulm0w"]
[ext_resource type="PackedScene" uid="uid://behw75osm6ats" path="res://scenes/bullet.tscn" id="2_iq51c"]
[ext_resource type="Texture2D" uid="uid://cjdjoptgyjslu" path="res://art/playerGrey_up2.png" id="2_jth17"]
[ext_resource type="Texture2D" uid="uid://b0r5i43l07ftu" path="res://art/playerGrey_walk1.png" id="3_343fa"]
[ext_resource type="Texture2D" uid="uid://bmyy5g4u0js6f" path="res://art/playerGrey_walk2.png" id="4_475yj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5puw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ulm0w")
}, {
"duration": 1.0,
"texture": ExtResource("2_jth17")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_343fa")
}, {
"duration": 1.0,
"texture": ExtResource("4_475yj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gku2i"]
radius = 25.0
height = 68.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 9
script = ExtResource("1_3i5fa")
playerSpeed = 40
bullet = ExtResource("2_iq51c")
bulletSpeed = 600
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_5puw5")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gku2i")

[node name="shootCooldown" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="shootPointR" type="Marker2D" parent="."]
position = Vector2(32, -26)

[node name="shootPointL" type="Marker2D" parent="."]
position = Vector2(-36, -26)

[node name="dashCooldown" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="shootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
